# abs-data

./: Cargo.toml  build.rs  dataflows.txt  foo.json  readme.md
src/: cache.rs  client.rs  config.rs  error_code.rs  lib.rs  models.rs  result.rs  test.json
src/builders/: client.rs  data_request.rs  dataflow_identifier.rs  dataflow_identifier_builder.rs  datakey.rs  datakey_builder.rs  meta_request.rs  mod.rs  request.rs  sdmx_data_request.rs  sdmx_data_request_builder.rs  sdmx_meta_request.rs  sdmx_meta_request_builder.rs  sdmx_request.rs  url.rs
src/factories/: mime_type.rs  mod.rs  request_header.rs  sdmx_request.rs  url.rs
src/models/: mod.rs
src/models/derived/: annotation.rs  attributes.rs  category.rs  category_schemes.rs  codelist.rs  concept.rs  concept_scheme.rs  concept_schemes.rs  constraint_attachment.rs  content_constraint.rs  cube_region.rs  data.rs  data_point.rs  data_sets.rs  data_structure_components.rs  data_structures.rs  dataflows.rs  descriptions.rs  dimensions.rs  key_value.rs  link.rs  meta.rs  meta_data_map.rs  meta_data_sets.rs  mod.rs  names.rs  observation.rs  period.rs  receiver.rs  relationship.rs  sdmx_response.rs  sender.rs  series.rs  structure.rs  texts.rs  time_range.rs  value.rs
src/models/typed/: adjustment_type.rs  agency_id.rs  dataflow_id.rs  dataflow_identifier.rs  dataflow_identifier_dimensions.rs  datakey.rs  datakey_dimension.rs  datakey_dimensions.rs  date_granularity.rs  detail.rs  dimension_at_observation.rs  dimension_key.rs  enums.rs  frequency.rs  measure.rs  meta_detail.rs  mod.rs  month.rs  period.rs  quarter.rs  reference.rs  region.rs  sdmx_client.rs  sdmx_data_request.rs  sdmx_meta_request.rs  sdmx_request.rs  semester.rs  structure_id.rs  structure_type.rs  version.rs
src/traits/: SdmxResponseType.rs  mod.rs  structure_type.rs  url_path_segment.rs
tests/: lib.rs
