[package]
name = "abs-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.4.1"
semver = "1.0.18"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"