[package]
name = "abs-data"
version = "0.1.1"
edition = "2021"
authors = ["Mitchell Rhys Hall"]
repository = "https://github.com/MitchellRhysHall/abs-data"
license = "MIT"
description = "Harness the Australian Bureau of Statistics SDMX API for data extraction and analysis with this intuitive library."
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.4"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"